--- a/app/src/main/res/layout/fragment_quiz_viewer.xml
+++ b/app/src/main/res/layout/fragment_quiz_viewer.xml
@@ -23,9 +23,9 @@
         <!-- 프로그레스바 -->
         <ImageView
             android:id="@+id/img_btn_back"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="2dp"
             app:layout_constraintBottom_toTopOf="@+id/progressBar"
@@ -55,9 +55,10 @@
         <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="314dp"
+            android:layout_width="0dp"
             android:layout_height="31dp"
             android:layout_gravity="center"
+            android:layout_marginHorizontal="40dp"
             android:layout_marginTop="40dp"
             android:backgroundTint="@color/green"
             android:indeterminate="false"
@@ -76,31 +77,29 @@
             app:layout_constraintGuide_begin="53dp" />
 
 
+
         <TextView
             android:id="@+id/txt_current_question_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="340dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="1dp"
             android:text="1"
-            android:textColor="@color/green"
             android:textSize="15dp"
+            android:textColor="@color/green"
             app:layout_constraintEnd_toStartOf="@+id/txt_question_num"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guideline_question" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="2dp"/>
 
         <TextView
             android:id="@+id/txt_question_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="45dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="40dp"
             android:text="/4"
             android:textSize="15dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/txt_current_question_num"
-            app:layout_constraintTop_toTopOf="@+id/guideline_question" />
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
