--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -18,5 +18,6 @@
         <domain includeSubdomains="true">172.20.10.2</domain>
 
         <domain includeSubdomains="true">192.168.0.23</domain>
+        <domain includeSubdomains="true">52.78.216.84</domain>
     </domain-config>
 </network-security-config>
