dev info 탭 디자인 개선

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,6 +27,12 @@
     <color name="quiz">#000000</color>
     <color name="content">#333333</color>
 
+    <!-- 개발자 정보 -->
+    <color name="name">#000000</color>
+    <color name="computer_science">#AEA9A9</color>
+    <color name="developer_email">#000000</color>
+    <color name="dev_info">#000000</color>
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
