--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,6 +14,6 @@
     <item
         android:id="@+id/navigation_my_page"
         android:icon="@drawable/ic_my_page"
-        android:title="my page" />
+        android:title="dev info" />
 
 </menu>
