--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -27,5 +27,11 @@
     <color name="quiz">#FFFFFF</color>
     <color name="content">#EDEEF0</color>
 
+    <!-- 개발자 정보 -->
+    <color name="name">#FFFFFF</color>
+    <color name="computer_science">#AEA9A9</color>
+    <color name="developer_email">#FFFFFF</color>
+    <color name="dev_info">#FFFFFF</color>
+
     <color name="white">#FFFFFF</color>
 </resources>
