--- a/app/src/main/res/layout/fragment_new_note.xml
+++ b/app/src/main/res/layout/fragment_new_note.xml
@@ -4,15 +4,17 @@
     android:id="@+id/new_note"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:weightSum="1"
     android:background="@color/note_background"
     android:orientation="vertical"
     tools:context=".ui.NewNoteFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:background="@drawable/img_note_background"
         android:orientation="vertical"
+        android:layout_weight="1"
         android:id="@+id/note">
 
 
