--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -37,8 +37,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/yeongdeoksea"
+                android:lineSpacingMultiplier="1.11"
                 android:text="# 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n# 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n "
-                android:textColor="@color/detail_note_page_content"
+                android:textColor="@color/detail_note_page_title"
                 android:textSize="23dp" />
 
         </ScrollView>
