--- a/app/src/main/res/layout/fragment_note_maker.xml
+++ b/app/src/main/res/layout/fragment_note_maker.xml
@@ -15,33 +15,35 @@
         android:layout_marginHorizontal="20dp"
         android:layout_height="70dp">
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/pretendard_black"
-            android:gravity="center"
-            android:text="이렇게 찍어주세요!"
-            android:textColor="@color/black"
-            android:textSize="25dp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/view"
-            app:layout_constraintEnd_toEndOf="@+id/view"
-            app:layout_constraintStart_toStartOf="@+id/view"
-            app:layout_constraintTop_toTopOf="@+id/view" />
-
-        <View
-            android:id="@+id/view"
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:layout_marginTop="22dp"
-            android:layout_marginBottom="7dp"
-            android:background="@drawable/empty_square"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
+            android:orientation="vertical"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <TextView
+                android:id="@+id/how_to_capture"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/pretendard_black"
+                android:gravity="center"
+                android:text="   이렇게 찍어주세요!   "
+                android:textColor="@color/green"
+                android:textSize="25dp"
+                android:textStyle="bold" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/green"
+                android:layout_marginTop="4dp"/>
+
+
+
+        </LinearLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -61,34 +63,39 @@
 <!--    중요한 단어는 빨간 펜으로 밑줄을 그어주세요.-->
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/empty_square"
-        android:layout_marginVertical="5dp"
         android:padding="10dp"
+        android:layout_gravity="center"
+        android:orientation="vertical"
         android:layout_marginHorizontal="20dp">
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/green"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="15dp"/>
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="64dp"
-            android:text="- 글자가 수평으로 잘 보이게 찍어주세요."
-            android:textColor="@color/black"
+            android:textAlignment="center"
+            android:text="글자가 수평으로 잘 보이게 찍어주세요."
+            android:textColor="@color/green"
+            android:layout_gravity="center"
             android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="5dp"
-            app:layout_constraintVertical_bias="0.073" />
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="- 중요한 단어는 빨간 펜으로 밑줄을 그어주세요."
-            android:textColor="@color/black"
+            android:text="중요한 단어는 빨간 펜으로 밑줄을 그어주세요."
+            android:textColor="@color/green"
+            android:layout_gravity="center"
+            android:textAlignment="center"
             android:layout_marginTop="10dp"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -99,17 +106,25 @@
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="- 지면으로부터 수직으로 찍어주세요."
-            android:textColor="@color/black"
+            android:text="지면으로부터 수직으로 찍어주세요."
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:textColor="@color/green"
             android:textSize="16sp"
             android:textStyle="bold"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/green"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="15dp"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
+    </LinearLayout>
 
 
 
@@ -117,6 +132,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:orientation="horizontal"
         android:background="@color/background_color">
@@ -127,7 +143,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginEnd="5dp"
+            android:background="@drawable/btn_round"
             android:textStyle="bold"
+            android:textSize="20dp"
             android:text="카메라"/>
 
         <Button
@@ -135,6 +153,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textSize="20dp"
+            android:background="@drawable/btn_round"
             android:layout_marginStart="5dp"
             android:textStyle="bold"
             android:text="갤러리"/>
